# nexus7

./: .mise.toml  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: cicd.yml  publish-crate.yml
src/: main.rs
src/aws/: availability_zone.rs  eks.rs  mod.rs  provider.rs  region.rs
src/aws/iam/: mod.rs  role.rs
src/aws/network/: cidr.rs  mod.rs  subnet.rs
src/aws/network/gateway/: internet.rs  mod.rs  nat.rs
src/aws/network/vpc/: mod.rs
src/aws/storage/: s3.rs
